import from Fedora

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
-clog
-*spec~
-/2.2.3.tar.gz
-/redis-2.2.3.tgz
-/2.2.4.tar.gz
-/redis-2.2.4.tgz
-/2.2.5.tar.gz
-/redis-2.2.5.tgz
-/2.2.7.tar.gz
-/redis-2.2.7.tgz
-/redis-2.2.8.tgz
-/redis-3.0.0.tgz
-/redis-3.1.0.tgz
-/redis-3.1.1.tgz
-/redis-3.1.2.tgz
-/redis-3.1.4.tgz
-/redis-3.1.5.tgz
-/redis-3.1.6.tgz
+BUILD
+BUILDROOT
+MOCK
+RPMS
+SOURCES/*.tgz
+SRPMS
